--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
         <script src="THREE.MeshLine.js"></script>
+        <script src="perlin.js"></script>
     </head>
     <body>
         <div id="root"></div>
