--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
         <script src="THREE.MeshLine.js"></script>
         <script src="perlin.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.2/dat.gui.min.js"></script>
     </head>
     <body>
         <div id="root"></div>
